Add svg support.

--- a/wingsuit/source/default/_patterns/01-atoms/svg/_svg--icon.twig
+++ b/wingsuit/source/default/_patterns/01-atoms/svg/_svg--icon.twig
@@ -4,8 +4,8 @@
  * svg--icon
  *
  * Available variables for svgicon:
- *    - svgicon.svgname [string]: String filename of the SVG to use from svg/
- *    - svgicon.svgfill [string]: Pass in a theme-color to colorize the SVG.
+ *    - icon [string]: String filename of the SVG to use from svg/
+ *    - size [string]: Pass in a size tailwind utilities.
  *    Otherwise it will default to black.
  *    - svgicon.svgstroke [string]: Pass in a theme-color to colorize the SVG
  *      stroke. Otherwise stroke will be none.
@@ -15,10 +15,12 @@
 
 {% set svg_classes = svg_classes|default([])|merge([
   'svg',
+  size != '' ? size,
+  fill-color != '' ? fill-color ~ " fill-current"
 ]) | sort | join(' ') | trim %}
 
 <div class="{{ svg_classes }}">
   <svg viewBox="0 0 500 500">
-    <use xlink:href="{{ paths.images }}/spritemap.svg?cacheBuster={{ random() }}#sprite-{{ svgname }}"></use>
+    <use xlink:href="{{ paths.images }}/spritemap.svg?cacheBuster={{ random() }}#sprite-{{ icon }}"></use>
   </svg>
 </div>
