Fix component generator and move to npm.

--- a/generators/new-component/generators/app/templates/ds/index.js.ejs
+++ b/generators/new-component/generators/app/templates/ds/index.js.ejs
@@ -8,7 +8,7 @@ import $ from 'jquery';
 import 'protons';
 
 // Module styles
-import './_<%= name %>.scss';
+import './_<%= name %>.css';
 
 // Module template
 import './_<%= name %>.twig';
