WINGSUIT #3: WIP: Refactor pattern macros. See todos in _render.twig.

--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
@@ -1,3 +1,4 @@
 {% import "@wingsuit/macros/_render.twig" as render %}
 
-{{  render.renderDemo('button', patterns) }}
+{{ render.patternDemo('test_button', patterns) }}
+
