--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/macros/_render.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/macros/_render.twig
@@ -1,76 +1,84 @@
-{% macro renderDemo(pattern, patterns) %}
-    {% import "@wingsuit/macros/_render.twig" as self %}
+{% macro patternDemo(pattern, patterns) %}
+  {% import "@wingsuit/macros/_render.twig" as self %}
 
-    {% if patterns[pattern] is not empty %}
-        {% set current_pattern = patterns[pattern] %}
-        {% set include_path =  current_pattern.use %}
+  {% if patterns[pattern] is not empty %}
+    {% set current_pattern = patterns[pattern] %}
+    {% set include_path =  current_pattern.use %}
 
-        {% set fields = [] %}
-        {% set variants = [] %}
+    <h2>Default {{ current_pattern.label }}</h2>
+    {{ self.patternPreview(current_pattern, current_pattern.variants) }}
+    {# With settings: #}
+{#    {% if current_pattern.settings is not empty %}#}
+{#      {{ self.getSettings(current_pattern.settings, fields, include_path) }}#}
+{#    {% endif %}#}
+  {% else %}
+    No Pattern "{{ pattern }}" found. Available patterns are:
+    {% for key in patterns|keys %}
+      {{ key }},
+    {% endfor %}
+  {% endif %}
+{% endmacro %}
 
-        {% for key, field in current_pattern.fields %}
-            {% set preview = field.preview %}
-            {% set fields = fields|merge({(key): preview}) %}
-        {% endfor %}
-        <h2>Default {{ current_pattern.label }}</h2>
-        {% include include_path with fields %}
+{#
+  Renders pattern with preview data defined in wingsuit.pattern.yml.
 
-        {% if current_pattern.variants is not empty %}
-            {% for key, variant in current_pattern.variants %}
-                {# Merges variant with fields array #}
-                {% set variants = variants|merge(fields)|merge({variant: key}) %}
-                <h2>{{ variant.label }} {{ current_pattern.label }}</h2>
-                {% include include_path with variants %}
+  @param string pattern
+    Current pattern name.
+  @param string variant
+    Renders a custom variant of the given pattern.
+  @param array settings
+    Uses settings like specific color etc.
+#}
+{% macro patternPreview(pattern, variants) %}
+  {% import "@wingsuit/macros/_render.twig" as self %}
+  {# Defines fields from preview data. #}
+  {% set fields = [] %}
+  {% set given_variants = [] %}
+  {% for key, field in pattern.fields %}
+    {% set fields = fields|merge({(key): field.preview}) %}
+  {% endfor %}
 
-                {% if current_pattern.settings is not empty %}
+  {# Configures variant from given variant. #}
+  {% if variant is not empty %}
+    {% if pattern.variants is not empty %}
+      {% for key, variant in variants %}
+        {# Merges variant with fields array #}
+        {% set given_variants = given_variants|merge(fields)|merge({variant: key}) %}
+        <h2>{{ variant.label }} {{ pattern.label }}</h2>
 
-                    {{ self.settings(current_pattern.settings, fields, include_path) }}
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-    {% else %}
-        No Pattern "{{ pattern }}" found. Available patterns are:
-        {% for key in patterns|keys %}
-            {{ key }},
-        {% endfor %}
+
+        {{ self.pattern(pattern, fields, given_variants) }}
+
+
+        {# Variants with settings: #}
+{#        {% if pattern.settings is not empty %}#}
+{#          {{ self.getSettings(current_pattern.settings, variants, include_path) }}#}
+{#        {% endif %}#}
+      {% endfor %}
     {% endif %}
+  {% endif %}
+{#  {{ self.pattern(pattern, fields) }}#}
+
 {% endmacro %}
 
-{% macro settings(settings, output, include_path) %}
-    {% set default_values = [] %}
-    {% for setting_key, setting in settings %}
-        {% if setting.type == "select" and setting.required == true %}
-            {% if setting.preview is not empty %}
-                {% set default_values = default_values|merge({(setting_key): setting.preview }) %}
-            {% elseif setting.default_value is not empty %}
-                {% set default_values = default_values|merge({(setting_key): setting.default_value }) %}
-            {% else %}
-                {% set default_values = default_values|merge({(setting_key): setting.options|first }) %}
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-    {% for setting_key, setting in settings %}
-        <h2>{{ setting.label }}</h2>
-        {#<details>#}
-        {% if setting.type == "select" %}
-            {% for option_key, option in setting.options %}
-                {% set output = output|merge(default_values)|merge({(setting_key): option_key}) %}
-                <strong>{{ dump(default_values) }}</strong>
-                {{ dump({(setting_key): option_key}) }}
-                <h2>{{ option }} {{ current_pattern.label }}</h2>
-                {% include include_path with output %}
-            {% endfor %}
-        {% endif %}
-        {#</details>#}
-    {% endfor %}
+{#
+  Renders pattern with given configuration.
+
+  @param string pattern
+    Current pattern name.
+  @param array fields
+    Fields content.
+  @param string variants
+    Renders a custom variant of the given pattern.
+  @param array settings
+    Uses settings like specific color etc.
+#}
+{% macro pattern(pattern, fields, variant) %}
+  {{ dump(path) }}
+  {% set path = pattern.use %}
+  {% set configuration = configuration|merge(fields)|merge({'variant': variant}) %}
+  {#|merge(settings)#}
+
+
+  {% include path with configuration %}
 {% endmacro %}
-
-
-
-{#Settings typen:#}
- {#- select/checkboxes#}
- {#- text/token#}
- {#- bool#}
-
-bg-blue-300
-bg-orange-500
