WINGSUIT #3: Add todos in render.twig.

--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/macros/_render.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/macros/_render.twig
@@ -1,3 +1,6 @@
+{# TODO: Implement pattern-twig.php to use settings method. #}
+{# TODO: Check why patttern macro is not used. #}
+
 {% macro patternDemo(pattern, patterns) %}
   {% import "@wingsuit/macros/_render.twig" as self %}
 
