--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
@@ -1,4 +1,5 @@
 {% import "@wingsuit/macros/_render.twig" as render %}
 
-{{ render.patternDemo('test_button', patterns) }}
+{{ render.pattern_demo('test_button', patterns, paths) }}
+
 
