--- a/wingsuit/source/default/_patterns/01-atoms/test-button/_test-button.twig
+++ b/wingsuit/source/default/_patterns/01-atoms/test-button/_test-button.twig
@@ -36,5 +36,6 @@
 {% endif %}
 
 <{{ button_element }} {{ button_attributes.addClass(button_classes) }}>
-{{ button_content }}
+{{ button_icon }} {{ button_content }}
+
 </{{ button_element }}>
