Add demo tools module.

--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/test-button/test-buttons.twig
@@ -1,4 +1,4 @@
-{% import "@wingsuit/macros/_render.twig" as render %}
+{% import "@ws-render-demo/macros/_pattern.twig" as render %}
 
 {{ render.pattern_demo('test_button', patterns, paths) }}
 
