--- a/wingsuit/source/default/_patterns/02-molecules/card/_card.twig
+++ b/wingsuit/source/default/_patterns/02-molecules/card/_card.twig
@@ -54,7 +54,13 @@
    </div>
   <div>
   {% if preheadline is not empty  %}
-    <div class="{{ preheadline_classes }}">
+    <div {{ attributes|default(attributes_object()).addClass([
+      'text-base',
+      'mb-1',
+      'uppercase',
+      'text-gray-light',
+      'font-sans',
+    ] | sort | join(' ') | trim) }}>
       {% block preheadline %}
         {{ preheadline }}
       {% endblock %}
