--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/002-media/image/images.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/000-wingsuit/002-media/image/images.twig
@@ -7,6 +7,9 @@
   } %}
 
   {% block content %}
+    {% set imageStyles = imageConfig.styles %}
+    {% set imageStylesResponsive = imageConfig.stylesResponsive %}
+
     <h2 class="pl-h2">Image styles</h2>
     {% for imageStyleName, imageStyleSetting in imageStyles %}
       <div>
