--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/button/buttons.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/01-atoms-demo/button/buttons.twig
@@ -1,3 +1,3 @@
 {% import "@ws-demo/macros/pattern.twig" as pattern %}
 
-{{ pattern.demo('button', patterns, paths, imageStyles) }}
+{{ pattern.demo('button', {'patterns': patterns, 'paths': paths, 'imageStyles': imageStyles}) }}
