--- a/wingsuit/apps/node-pl/pattern-lab/_patterns/02-molecules-demo/card/cards.twig
+++ b/wingsuit/apps/node-pl/pattern-lab/_patterns/02-molecules-demo/card/cards.twig
@@ -1,3 +1,3 @@
 {% import "@ws-demo/macros/pattern.twig" as pattern %}
 
-{{ pattern.demo('card', patterns, paths, imageStyles) }}
+{{ pattern.demo('card', {'patterns': patterns, 'path': paths, 'imageConfig': imageConfig} ) }}
