Fix js/css linting.

--- a/generators/new-component/generators/app/templates/ds/index.js.ejs
+++ b/generators/new-component/generators/app/templates/ds/index.js.ejs
@@ -9,4 +9,4 @@ import './_<%= name %>.css';
 import './_<%= name %>.twig';
 
 // Import wingsuit.yaml
-import './<%= name %>.wingsuit.yaml';
+import './<%= name %>.wingsuit.yml';
