--- a/generators/new-component/generators/app/templates/app/patterns.twig.ejs
+++ b/generators/new-component/generators/app/templates/app/patterns.twig.ejs
@@ -1,3 +1,3 @@
 {% import "@ws-demo/macros/pattern.twig" as pattern %}
 
-{{ pattern.demo('<%= underscoreName %>', {'patterns': patterns, 'path': paths, 'imageConfig': imageConfig}) }}
+{{ pattern.demo('<%= underscoreName %>', {'patterns': patterns, 'paths': paths, 'imageConfig': imageConfig}) }}
