Add demo projects.

--- a/tools/demo/docs/02-colors.twig
+++ b/tools/demo/docs/02-colors.twig
@@ -14,9 +14,9 @@
   } %}
   {% block content %}
 
-    <section class="pl-section">
-    <h2 class="pl-h2">Background Colors</h2>
-    <table class="pl-table">
+    <section class="ws-section">
+    <h2 class="ws-h2">Background Colors</h2>
+    <table class="ws-table">
       <thead>
       <tr>
         <th>
@@ -53,10 +53,10 @@
       {% endfor %}
     </table>
     </section>
-    <hr class="pl-hr">
-    <section class="pl-section">
-    <h2 class="pl-h2">Text Colors</h2>
-    <table class="pl-table">
+    <hr class="ws-doc-block-seperator">
+    <section class="ws-section">
+    <h2 class="ws-h2">Text Colors</h2>
+    <table class="ws-table">
       <thead>
       <tr>
         <th>Class</th>
