--- a/tools/demo/docs/06-breakpoints.twig
+++ b/tools/demo/docs/06-breakpoints.twig
@@ -14,9 +14,9 @@
     "doc_link": "https://tailwindcss.com/docs/breakpoints/"
   } %}
   {% block content %}
-    <section class="pl-section">
-      <h2 class="pl-h2">Screens</h2>
-      <table class="pl-table">
+    <section class="ws-section">
+      <h2 class="ws-h2">Screens</h2>
+      <table class="ws-table">
         <thead>
         <th>
           Screen name
@@ -36,10 +36,10 @@
         </tbody>
       </table>
     </section>
-    <hr class="pl-hr">
-    <section class="pl-section">
-      <h2 class="pl-h2">Devices</h2>
-    <table class="pl-table">
+    <hr class="ws-doc-block-seperator">
+    <section class="ws-section">
+      <h2 class="ws-h2">Devices</h2>
+    <table class="ws-table">
       <thead>
         <th>Device name</th>
         <th>Device width</th>
