--- a/tools/demo/macros/config.twig
+++ b/tools/demo/macros/config.twig
@@ -7,7 +7,7 @@
     The tailwind config.
 #}
 {% macro block(theme_name, items) %}
-    <div class="pl-code rounded-lg text-white bg-black mt-10">
+    <div class="ws-code ws-rounded-lg ws-text-white ws-bg-black ws-mt-10">
         // tailwind.config.js
         <div>module.exports = {</div>
         <div class="ml-2">theme: {</div>
