--- a/tools/demo/docs/04-sizing.twig
+++ b/tools/demo/docs/04-sizing.twig
@@ -15,26 +15,26 @@
     "doc_link": "https://tailwindcss.com/docs/customizing-spacing"
   } %}
   {% block content %}
-    <section class="pl-section">
-      <div class="pl-mb">
+    <section class="ws-section">
+      <div class="ws-mb">
         {{ properties.table("Width", "https://tailwindcss.com/docs/width", "Width", "w", tailwind.theme.width) }}
       </div>
-      <div class="pl-mb">
+      <div class="ws-mb">
         {{ properties.table("Min Width", "https://tailwindcss.com/docs/min-width", "Min Width", "min-w", tailwind.theme.minWidth) }}
       </div>
-      <div class="pl-mb">
+      <div class="ws-mb">
         {{ properties.table("Max Width", "https://tailwindcss.com/docs/max-width", "Max Width", "max-w", tailwind.theme.maxWidth) }}
       </div>
     </section>
-    <hr class="pl-hr">
-    <section class="pl-section">
-      <div class="pl-mb">
+    <hr class="ws-doc-block-seperator">
+    <section class="ws-section">
+      <div class="ws-mb">
         {{ properties.table("Height", "https://tailwindcss.com/docs/height", "Height", "h", tailwind.theme.height) }}
       </div>
-      <div class="pl-mb">
+      <div class="ws-mb">
         {{ properties.table("Min Height", "https://tailwindcss.com/docs/min-height", "Min Height", "min-h", tailwind.theme.minHeight) }}
       </div>
-      <div class="pl-mb">
+      <div class="ws-mb">
         {{ properties.table("Max Height", "https://tailwindcss.com/docs/max-height", "Max Height", "max-h", tailwind.theme.maxHeight) }}
       </div>
     </section>
