--- a/tools/demo/docs/05-borders.twig
+++ b/tools/demo/docs/05-borders.twig
@@ -14,9 +14,9 @@
     "doc_link": "https://tailwindcss.com/docs/customizing-spacing"
   } %}
   {% block content %}
-    <section class="pl-section">
-      <h2 class="pl-h2">Border Color</h2>
-      <table  class="pl-table">
+    <section class="ws-section">
+      <h2 class="ws-h2">Border Color</h2>
+      <table  class="ws-table">
         <thead>
         <tr>
           <th>Class</th>
@@ -53,8 +53,8 @@
         {% endfor %}
       </table>
     </section>
-    <hr class="pl-hr">
-    <section class="pl-section">
+    <hr class="ws-doc-block-seperator">
+    <section class="ws-section">
       {{ properties.table("Border Width", "https://tailwindcss.com/docs/border-width", "Properties", "border", tailwind.theme.borderWidth) }}
       <h3 class="pt-10">Samples</h3>
       <div class="bg-white rounded-lg border-t border-l border-r border-b border-gray-400 p-4 flex flex-wrap">
@@ -63,8 +63,8 @@
         {% endfor %}
       </div>
     </section>
-    <hr class="pl-hr">
-    <section class="pl-section">
+    <hr class="ws-doc-block-seperator">
+    <section class="ws-section">
       {{ properties.table("Border Radius", "https://tailwindcss.com/docs/border-radius", "Properties", "rounded", tailwind.theme.borderRadius) }}
 
       <h3 class="pt-10">Samples</h3>
