--- a/tools/demo/macros/pattern.twig
+++ b/tools/demo/macros/pattern.twig
@@ -1,3 +1,5 @@
+{% import "@ws-demo/macros/tabs.twig" as tabs %}
+
 {#
   Renders patterns option set.
 
@@ -10,41 +12,92 @@
   @param array paths
     Paths configuration
 #}
-{% macro _option_set(id, variant, envContext) %}
-    {% set option_sets = pattern_option_set(id, variant) %}
-    {% if option_sets|length != 0 %}
-        <div><h2 class="pl-h2">Settings:</h2>
-            {% for set_name, option_set in option_sets %}
-
-                <section x-data="{ tab: 'foo' }" class="pl-mb-s">
-                    <div class="pl-mb-s">
-                        <h3 class="pl-h3">{{ option_set.label }}</h3>
-                        {% for option_name, display in option_set['options'] %}
-                            {% set tab_name = variant|default('n') ~ '-' ~ set_name ~ '-' ~ option_name %}
-                            <button
-                                    x-on:click="tab = '{{ tab_name }}'"
-                                    x-bind:class="{ 'pl-tab-active': tab === '{{ tab_name }}' }"
-                                    class="pl-tab"
-                            >{{ display }}</button>
-                        {% endfor %}
-                    </div>
-                    <ul>
-                        {% for option_name, display in option_set['options'] %}
-                            {% set tab_name = variant|default('n') ~ '-' ~ set_name ~ '-' ~ option_name %}
-                            {% set settings = {} %}
-                            {% set settings = settings|merge({(set_name):(option_name)}) %}
-                            <li x-show="tab === '{{ tab_name }}'">
-                                {{ pattern_preview(id, variant, {}, settings) }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </section>
+{% macro settings_pane(pattern_settings) %}
+    {% import "@ws-demo/macros/tabs.twig" as tabs %}
+    {% set accordion_config = {} %}
+    {% for setting_name, pattern_setting in pattern_settings %}
+        {% set content %}
+            <div>
+                {{ tabs.radio(setting_name, "None", "x-on:click=\"pattern_set = ''\"", "x-bind:class=\"{ 'bg-purple-600 transform translate-x-full': pattern_set === '' }\"") }}
+            </div>
+            {% for option_name, option_display in pattern_setting['options'] %}
+                <div>
+                    {{ tabs.radio(setting_name ~ "-" ~ option_name, option_display, "x-on:click=\"pattern_set = '" ~ setting_name ~ "-" ~ option_name ~ "'\"", "x-bind:class=\"{ 'bg-purple-600 transform translate-x-full': pattern_set === '" ~ setting_name ~ "-" ~ option_name ~ "' }\"") }}
+                </div>
             {% endfor %}
-        </div>
-    {% endif %}
+        {% endset %}
+        {% set accordion_config = accordion_config|merge({(setting_name) : {'label': pattern_setting.label, 'content': content }}) %}
+    {% endfor %}
+
+    {{ tabs.accordion('settings_pane', accordion_config) }}
 {% endmacro %}
 
+{% macro variant_setting(pattern_id, variant_id, settings, envContext) %}
+    {% import "@ws-demo/macros/code.twig" as code %}
+    {% import "@ws-demo/macros/tabs.twig" as tabs %}
+    <div class="ws-container">
+        {{ pattern_preview(pattern_id, variant_id, {}, settings) }}
+    </div>
+    <hr class="ws-doc-seperator ws-my-8">
+    {% set pattern = get_pattern(pattern_id, variant_id, {}, settings) %}
 
+    <div class="ws-container">
+        <h3 class="ws-doc-h3">Fields</h3>
+        <table class="ws-doc-table">
+            <thead>
+            <tr>
+                <th>Key</th>
+                <th>Type</th>
+                <th>Label</th>
+                <th>Description</th>
+                <th>Required</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for field_name, field in pattern.getFieldDefinitions() %}
+                <tr>
+                    <td>{{ field_name }}</td>
+                    <td>{{ field['type'] }}</td>
+                    <td>{{ field['label'] }}</td>
+                    <td>{{ field['description'] }}</td>
+                    <td>{{ field['required']|default('false') }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        {% if (pattern.hasSettingDefinitions()) %}
+            <h3 class="ws-doc-h3">Settings</h3>
+            <table class="ws-doc-table">
+                <thead>
+                <tr>
+                    <th>Key</th>
+                    <th>Type</th>
+                    <th>Label</th>
+                    <th>Description</th>
+                    <th>Required</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for setting_name, setting in pattern.getSettingDefinitions() %}
+                    <tr>
+                        <td>{{ setting_name }}</td>
+                        <td>{{ setting['type'] }}</td>
+                        <td>{{ setting['label'] }}</td>
+                        <td>{{ setting['description'] }}</td>
+                        <td>{{ setting['required']|default('false') }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
+            <h3 class="ws-doc-h3">Twig</h3>
+            {{ code.block(
+                '{% include "' ~ pattern.getUse() ~ '" ' ~ pattern.getVariables()|json_encode(constant('JSON_PRETTY_PRINT')) ~ '  %}'
+            ) }}
+        {% endif %}
+    </div>
+{% endmacro %}
 {#
   Renders the pattern demo page.
 
@@ -55,48 +108,76 @@
   @param array paths
     Paths configuration
 #}
+{% macro variant(pattern_id, variant_id, envContext) %}
+    {% set pattern = envContext['patterns'][pattern_id] %}
+    <div class="ws-flex ws-flex-col ws-flex-grow"
+         x-data="{pane_is_open: false,  pattern_set: '', settings_pane: '', addition_infos: '' }">
+        <main class="ws-flex ws-flex-col ws-flex-grow">
+            <div class="ws-flex-grow ws-flex ws-flex-row">
+                <div class="ws-flex-grow">
+                    <header>
+                        <h1 class="ws-doc-h1 ws-text-center">{{ pattern.label }}</h1>
+                        <hr class="ws-doc-seperator ws-mb-8">
+                    </header>
+
+                    <div x-show="pattern_set === ''">
+                        {{ _self.variant_setting(pattern_id, variant_id, {}, envContext) }}
+                    </div>
+                    {% set pattern_settings = pattern_option_set(pattern_id, variant_id) %}
+                    {% for setting_name, pattern_setting in pattern_settings %}
+                        {% for option_name, option_display in pattern_setting['options'] %}
+                            <div x-show="pattern_set === '{{ setting_name }}-{{ option_name }}'">
+                                {% set settings = {} %}
+                                {% set settings = settings|merge({(setting_name):(option_name)}) %}
+                                {{ _self.variant_setting(pattern_id, variant_id, settings, envContext) }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+                <div class="ws-fixed ws-bg-gray-800 ws-right-0 ws-px-4 ws-py-2 ws-text-white ws-transform ws-rotate--90"
+                     x-on:click="pane_is_open = true">Open settings
+                </div>
+                <div class="ws-flex ws-bg-gray-800"
+                     x-bind:class="{ 'ws-w-64': pane_is_open === true }"
+                >
+                    <div class="fixed ws-top-0"
+                         x-bind:class="{ 'ws-w-64': pane_is_open === true }"
+                    >
+                        {{ _self.settings_pane(pattern_settings) }}
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+{% endmacro %}
+
 {% macro demo(id, envContext) %}
+
     {% set patterns = envContext['patterns'] %}
     {% if patterns[id] is not empty %}
-        {% set current_pattern = patterns[id] %}
-        <div class="pl-container">
-            <h1 class="pl-h1">Pattern: {{ current_pattern.label }}</h1>
-            {% if current_pattern.description %}
-                <p>{{ current_pattern.description }}</p>
-            {% endif %}
-        </div>
-        <hr class="pl-hr">
-        {% if current_pattern.variants|length != 0 %}
+        <header class="ws-flex ws-flex-row ws-w-full ws-h-6 ws-fixed ws-top-0">
+            <div class="ws-flex-grow">
+                {% for variant_id, variant_config in current_pattern.variants %}
+                    <div>{{ variant_config['display'] }}</div>
+                {% endfor %}
+            </div>
+            <div class="ws-flex-shrink">
+                <div>Open settings</div>
+            </div>
+        </header>
 
-            {% for variant, variant_config in current_pattern.variants %}
-                <section class="pl-container">
-                    <h2 class="pl-h2">Variant: {{ variant_config.label }}</h2>
-                    {% if variant_config.description %}
-                        <p class="pl-mb-mb">{{ variant_config.description }}</p>
-                    {% endif %}
-                    <div class="pl-mb-s">
-                        {{ pattern_preview(id, variant) }}
-                    </div>
-                    <div>
-                        {{ _self._option_set(id, variant, envContext) }}
-                    </div>
-                </section>
-                <hr class="pl-hr">
+        {% set current_pattern = patterns[id] %}
+        {% if current_pattern.variants|length != 0 %}
+            {% for variant_id, variant_config in current_pattern.variants %}
+                {{ _self.variant(id, variant_id, envContext) }}
             {% endfor %}
         {% else %}
-            <section class="pl-container">
-                <div class="pl-mb-s">
-                    {{ pattern_preview(id, '') }}
-                </div>
-                {{ _self._option_set(id, variant, envContext) }}
-            </section>
+            {{ _self.variant(id, null, envContext) }}
         {% endif %}
-
     {% else %}
         No Pattern "{{ id }}" found. Available patterns are:
         {% for key in patterns|keys %}
             {{ key }},
         {% endfor %}
     {% endif %}
-    </div>
 {% endmacro %}
