--- a/tools/demo/macros/properties.twig
+++ b/tools/demo/macros/properties.twig
@@ -14,13 +14,15 @@
 #}
 {% macro table(title, doc_link, column_name, prefix, items) %}
 
-    <h2 class="pl-h2 ">{{ title }}{% if doc_link is not empty %}
-            <a class="pl-link pl-text-sm" href="{{ doc_link }}">(Tailwind documentation)</a>
+    <div class="ws-doc-block">
+    <h2>{{ title }}{% if doc_link is not empty %}
+            <a href="{{ doc_link }}">(Tailwind documentation)</a>
         {% endif %}</h2>
+    </div>
     <div
-            class="lg:max-h-sm overflow-y-auto scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray scrolling-touch"
+            class="lg:max-h-sm ws-overflow-y-auto ws-scrollbar-w-2 ws-scrollbar-track-gray-lighter ws-scrollbar-thumb-rounded ws-scrollbar-thumb-gray ws-scrolling-touch"
             style="max-height: 400px">
-        <table class="pl-table">
+        <table class="ws-table">
             <thead>
             <tr>
                 <th>Class</th>
@@ -30,7 +32,7 @@
             <tbody>
             {% for name, value in items %}
                 <tr>
-                    <td class="pl-text-blue">.{{ prefix }}-{{ name }}</td>
+                    <td>.{{ prefix }}-{{ name }}</td>
                     <td>{{ value }}</td>
                 </tr>
             {% endfor %}
@@ -51,9 +53,14 @@
   @param array items
     tailwind property items.
 #}
+
 {% macro list(title, text, prefix, items) %}
-    <h3 class="pl-h3 pl-mt">{{ title }}</h3>
-    <div class="pl-samples bg-white rounded-lg border border-gray-400 p-4 ">
+    {% if title is not empty %}
+    <div class="ws-doc-block">
+        <h3>{{ title }}</h3>
+    </div>
+    {% endif %}
+    <div class="ws-samples ws-bg-white ws-rounded-lg ws-border border-gray-400 p-4 ">
         {% for name, value in items %}
             <div class="mb-6"><p class="text-sm text-gray-600">.{{ prefix }}-{{ name }}</p>
                 <p class="{{ prefix }}-{{ name }} text-gray-800">{{ text }}</p></div>
