--- a/tools/demo/page.twig
+++ b/tools/demo/page.twig
@@ -1,26 +1,20 @@
-
-<div class="pl-container mx-auto">
-  <div class="pl-mb">
-  <h1 class="pl-h1">{{ title }}</h1>
-  {% if intro is not empty or doc_link is not empty %}
-    <div>
-
-      {% if intro is not null %}
-        <p>{{ intro }}</p>
-      {% endif %}
-      {% if doc_link is not empty %}
-        <p>For more information see: <a class="pl-link" href="{{ doc_link }}" target="_blank" rel="noopener noreferrer">Tailwind
-            Documentation</a></p>
-      {% endif %}
+<div class="ws-container ws-mx-auto">
+    <div class="ws-pt-6 ws-doc-block">
+        <h1>{{ title }}</h1>
+        {% if intro is not empty or doc_link is not empty %}
+            {% if intro is not null %}
+                <p>{{ intro }}</p>
+            {% endif %}
+            {% if doc_link is not empty %}
+                <p>For more information see:
+                    <a href="{{ doc_link }}" target="_blank" rel="noopener noreferrer">Tailwind Documentation</a></p>
+            {% endif %}
+        {% endif %}
     </div>
-
-  {% endif %}
-  </div>
-  <div>
-    {% block content %}
-      {{ content }}
-    {% endblock %}
-  </div>
+    <hr class="ws-doc-block-seperator">
+    <div class="ws-mb-6">
+        {% block content %}
+            {{ content }}
+        {% endblock %}
+    </div>
 </div>
-
-
