--- a/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
+++ b/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
@@ -11,5 +11,6 @@
   <h1>button</h1>
   <div>Wingsuit component!</div>
   <div>Field variable: <code>{{ field_1 }}</code></div>
-  <div>Setting variable: <code>{{ setting_1 }}</code></div>
+  <div>Setting variable 1: <code>{{ setting_1 }}</code></div>
+  <div>Setting variable 2: <code>{{ setting_2 }}</code></div>
 </div>
