--- a/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
+++ b/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
@@ -1,4 +1,4 @@
-<div class="bg-white">Hi Rafi  YO {{ text }}GO</div>
+<div class="bg-white">Hi Rafiaasa  YO {{ foo }}GO</div>
 {% for pattern in patterns %}
   {{ pattern.label }}
 {% endfor %}
