Switch from twing to twigjs.
- Remove twing.
- Add initial pattern module.

--- a/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
+++ b/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
@@ -8,7 +8,7 @@
 #}
 
 <div class="bg-green-500 xxx">
-  XXX
+  Hans
   <h1>button</h1>
   <div>Wingsuit component!</div>
   <div>Field variable: <code>{{ field_1 }}</code></div>
