--- a/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
+++ b/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
@@ -2,3 +2,6 @@
 {% for pattern in patterns %}
   {{ pattern.label }}
 {% endfor %}
+
+{{ _context['foo'] }}
+{% include "@atoms/button/_button.twig" %}
