Add initial storybook integration.

--- a/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
+++ b/wingsuit/apps/storybook/_patterns/01-atoms-demo/button/buttons.twig
@@ -1,7 +1,2 @@
-<div class="bg-white">Hi Rafiaasa  YO {{ foo }}GO</div>
-{% for pattern in patterns %}
-  {{ pattern.label }}
-{% endfor %}
-
-{{ _context['foo'] }}
-{% include "@atoms/button/_button.twig" %}
+MAIN PATTERN
+{{ pattern('button') }}
