--- a/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
+++ b/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
@@ -1,17 +1,2 @@
-{#
-/**
- * @file
- * button
- *
- * See button.wingsuit.yml for documentation.
- */
-#}
-
-<div class="bg-green-500 xxx">
-  Hans
-  <h1>button</h1>
-  <div>Wingsuit component!</div>
-  <div>Field variable: <code>{{ field_1 }}</code></div>
-  <div>Setting variable 1: <code>{{ setting_1 }}</code></div>
-  <div>Setting variable 2: <code>{{ setting_2 }}</code></div>
-</div>
+SUB PATTERN2
+{{ color }}
