--- a/packages/wingsuit/source/default/_patterns/02-molecules/card/_card.twig
+++ b/packages/wingsuit/source/default/_patterns/02-molecules/card/_card.twig
@@ -9,7 +9,7 @@
   alignment: center
 #}
 {% set classes = classes|default([])|merge([
-  alignment == 'center'?'text-center',
+  alignment == 'center'?'text-center': '',
   'group hover:no-underline'
 ]) | sort | join(' ') | trim  %}
 
