Update bundle logic.

--- a/packages/generators/new-component/generators/app/templates/ds/_pattern.twig.ejs
+++ b/packages/generators/new-component/generators/app/templates/ds/_pattern.twig.ejs
@@ -9,7 +9,7 @@
 
 <div>
   <h1><%= name %></h1>
-  <div>Wingsuit component!</div>
+  <div>Server component!</div>
   <div>Field variable: <code>{{ field_1 }}</code></div>
   <div>Setting variable: <code>{{ setting_1 }}</code></div>
 </div>
