Fix twing render issues.

--- a/packages/wingsuit/apps/storybook/_patterns/05-pages/article.twig
+++ b/packages/wingsuit/apps/storybook/_patterns/05-pages/article.twig
@@ -1,5 +1,1 @@
-{% extends '@templates/site-container.twig' %}
-  {% block content %}
-
-Article
-  {% endblock %}
+{{ pattern_preview('card', 'default',{ preheadline: 'XXXX'}) }}
