--- a/packages/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
+++ b/packages/wingsuit/source/default/_patterns/01-atoms/button/_button.twig
@@ -1,41 +1,3 @@
-{#
-/**
- * @file
- * button
- *
- * Available variables for button:
- *  - button.variable_name [variable_type]: Description of the variable. Example below.
- *  - button.invert [bool]: When set, colors will be inverted for light display on dark background.
- */
-#}
-{%  set button_element = button_element|default('div') %}
-{% set button_attributes = attributes_object() %}
-{% if url is not empty %}
-  {% set button_attributes = button_attributes.setAttribute('href', url) %}
-  {% set button_element = 'a' %}
-{% endif %}
-{%- set button_content -%}
-  {{- button_content -}}
-{% endset %}
-<{{ button_element }} {{ button_attributes.addClass([
-  'px-4',
-  'py-3',
-  'leading-18',
-  'font-bold',
-  'uppercase',
-  'inline-block',
-  'border-2',
-  'border-red',
-  variant == 'default' ? 'bg-red-500 text-white': '',
-  variant == 'outline' ? 'text-blue-500': '',
-
-] | sort | join(' ') | trim) }}>
-{{ button_content|striptags }}
-  {% if button_svg is not empty %}
-    {% include "@atoms/svg/_svg--icon.twig" with {
-      icon: button_svg,
-      size: {default: 'w-15', large: 'w-24'}[button_svg_size],
-      svg_classes: ['inline-block', 'align-middle', button_content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
-    } %}
-  {% endif %}
-</{{ button_element }}>
+<div>
+XXX
+</div>
